@@ -258,6 +258,7 @@ records-mismatch-record-clause:	error	# not verified yet
 record-delimiter:			ignore
 sequential-delimiters:			unconformable
 record-delim-with-fixed-recs:		ok
+record-sequential-advancing: ok
 missing-statement:			warning
 zero-length-literals:			unconformable # not verified yet
 xml-generate-extra-phrases:		unconformable
