@@ -256,6 +256,7 @@ records-mismatch-record-clause:	ok	# follows IBM "if not matching use the record
 record-delimiter:			ok
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		ok
+record-sequential-advancing: ok
 missing-statement:			error		# according to documentation
 zero-length-literals:			unconformable
 xml-generate-extra-phrases:		ok
