@@ -259,6 +259,7 @@ records-mismatch-record-clause:		error	# not verified yet
 record-delimiter:			ignore
 sequential-delimiters:			unconformable
 record-delim-with-fixed-recs:		error
+record-sequential-advancing: warning
 missing-statement:			warning
 zero-length-literals:			unconformable # not verified yet
 xml-generate-extra-phrases:		unconformable
