@@ -260,6 +260,7 @@ records-mismatch-record-clause:	error
 record-delimiter:			ok
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		ok
+record-sequential-advancing: ok
 missing-statement:			warning		# not verified yet
 zero-length-literals:			unconformable
 xml-generate-extra-phrases:		unconformable
